--- a/app/Resources/views/directives/game-login.html.twig
+++ b/app/Resources/views/directives/game-login.html.twig
@@ -1,6 +1,6 @@
 <div class = "login" ng-controller="LoginController as loginCtrl">
 	<!-- SHOW ERROR/SUCCESS MESSAGES --> 
-	<div class="redText" ng-show='message'>{{ message }}</div>
+	<div class="redText" ng-show='message'>{% verbatim %}{{ message }}{% endverbatim %}</div>
 
 	<form ng-submit="loginCtrl.processForm()">
 		<h1>Welcome to Pickomino!</h1>
