--- a/app/Resources/views/directives/game-registration.html.twig
+++ b/app/Resources/views/directives/game-registration.html.twig
@@ -1,5 +1,5 @@
 <div class = "registration inset">
-		<form action="app/assets/php/registration.php" method="POST">
+		<form action="/registration" method="POST">
 			<h3>Welcome to Pickomino!<br>  
 			Please register below.</h3>
 			<table style="margin: auto;">
