update image file locations and add verbatim tags in twigs

--- a/app/Resources/views/directives/game-active-dice.html.twig
+++ b/app/Resources/views/directives/game-active-dice.html.twig
@@ -1,3 +1,4 @@
+{% verbatim %}
 <div ng-controller="ActiveDiceController as activeDice">				
 	<div class = 'titles-box'>
 		<span class = 'titles'>Active Dice</span>
@@ -8,3 +9,4 @@
 		</div>
 	</div>
 </div>
+{% endverbatim %}
