--- a/app/Resources/views/directives/game-grill-worms.html.twig
+++ b/app/Resources/views/directives/game-grill-worms.html.twig
@@ -1,3 +1,4 @@
+{% verbatim %}
 <div class = 'titles-box'>
 	<span class = 'titles'>Worms on the Grill</span>
 </div>	
@@ -12,3 +13,4 @@
 		<span class="cross">x</span>
 	</div>
 </div>
+{% endverbatim %}
