--- a/app/Resources/views/directives/game-frozen-dice.html.twig
+++ b/app/Resources/views/directives/game-frozen-dice.html.twig
@@ -1,3 +1,4 @@
+{% verbatim %}
 <div ng-controller="FrozenDiceController as frozenDice">
 	<div class = 'titles-box'>
 		<span class = 'titles'>Frozen Dice (Sum: {{frozenDice.frozenStatus.sum}})</span>
@@ -8,3 +9,4 @@
 		</div>
 	</div>
 </div>
+{% endverbatim %}
