--- a/app/Resources/views/directives/game-player-options.html.twig
+++ b/app/Resources/views/directives/game-player-options.html.twig
@@ -1,3 +1,4 @@
+{% verbatim %}
 <div ng-controller="PlayerOptionsController as optionsCtrl">
 	<div class = 'titles-box'>
 		<span class = 'titles' ng-class="{ 'redText' : optionsCtrl.gameStatus.bunk }">
@@ -24,3 +25,4 @@
 		</button></a>
 	</div>
 </div>
+{% endverbatim %}
