update all directive js files to use FOSjsrouting

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -23,6 +23,8 @@
 			<script src="{{ asset('assets/bower_components/angular/angular.js') }}"></script>
 			<script src="{{ asset('assets/bower_components/angular-touch/angular-touch.js') }}"></script>
 			<script src="{{ asset('assets/bower_components/angular-animate/angular-animate.js') }}"></script>
+			<script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
+			<script src="{{ path('fos_js_routing_js', { callback: 'fos.Router.setData' }) }}"></script>
 
 			<script src="{{ asset('bundles/app/js/app.module.js') }}"></script>
 			
