--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -11,8 +11,10 @@
 		<link rel="stylesheet" href="{{ asset('bundles/app/css/board.css') }}" type="text/css" />
 		{% endblock %}
 	</head>
-    <body>
-    
+    <body>	
+	
+		<div ng-controller="LoginController as loginCtrl" ng-init="loginCtrl.setUser('{{user_id}}', '{{firstname}}')"></div>
+    	
         {% block body %}
         {% endblock %}
         
