fix onetomany mapping in game/gamestate

--- a/app/Resources/views/main/pickomino.html.twig
+++ b/app/Resources/views/main/pickomino.html.twig
@@ -7,7 +7,7 @@
 	<div>
 		<game-header></game-header>
 		
-		<div class = "login"?
+		<div class = "login">
 		{% block content %}{% endblock %}
 		</div>
 		
