--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -1,5 +1,7 @@
-{% extends 'main/pickomino.html.twig' %}
+{% extends 'base.html.twig' %}
 
-{% block content %}
-    {% block fos_user_content %}{% endblock %}
+{% block body %}
+    <div class="login">
+    	{% block fos_user_content %}{% endblock %}
+    </div>
 {% endblock %}
