--- a/app/Resources/views/directives/game-player-options.html.twig
+++ b/app/Resources/views/directives/game-player-options.html.twig
@@ -1,12 +1,13 @@
-{% verbatim %}
 <div ng-controller="PlayerOptionsController as optionsCtrl">
+	{% verbatim %}
 	<div class = 'titles-box'>
 		<span class = 'titles' ng-class="{ 'redText' : optionsCtrl.gameStatus.bunk }">
 			<span ng-hide="optionsCtrl.gameStatus.numPlayers===1 || optionsCtrl.gameStatus.gameOver">
 				Player {{optionsCtrl.gameStatus.activePlayer+1}}: 
 			</span>{{optionsCtrl.messageText.info}}
 		</span>
-	</div>	
+	</div>
+	{% endverbatim %}	
 	<div class = 'playeroptions outset'>
 		<button class = 'buttons inset activeButtonHighlight' ng-click="optionsCtrl.setPlayers(1)" ng-show="optionsCtrl.gameStatus.playerSetup">
 			Solo Play
@@ -20,9 +21,8 @@
 		<button class = 'buttons inset bunkButtonHighlight' ng-show="optionsCtrl.gameStatus.bunk" ng-click="optionsCtrl.bunkPenalty()">
 			Clear Bunk
 		</button>
-		<a href="pickomino.php"><button class = 'buttons inset activeButtonHighlight' ng-show="optionsCtrl.gameStatus.gameOver">
+		<a href='{{ url('homepage') }}'><button class = 'buttons inset activeButtonHighlight' ng-show="optionsCtrl.gameStatus.gameOver">
 			Reset
 		</button></a>
 	</div>
 </div>
-{% endverbatim %}
