add firstname and lastname to translation messages for en

--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -2,6 +2,8 @@
 
 {% block body %}
     <div class="login">
-    	{% block fos_user_content %}{% endblock %}
+    	{% block fos_user_content %}
+    		{% trans_default_domain 'FOSUserBundle' %}
+    	{% endblock %}
     </div>
 {% endblock %}
