modify game-login to point to registration url and introduce guest login option

--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -6,4 +6,6 @@
     		{% trans_default_domain 'FOSUserBundle' %}
     	{% endblock %}
     </div>
+    <br/>
+    <game-login></game-login>
 {% endblock %}
