modify guest login to create and programmatically login new user

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -14,7 +14,7 @@
     <body>	
 		
 		{% if app.user %}
-			<div ng-controller="LoginController as loginCtrl" ng-init="loginCtrl.setUser('{{ app.user.id }}', '{{ app.user.username }}')"></div>
+			<div ng-controller="LoginController as loginCtrl" ng-init="loginCtrl.setUser('{{ app.user.id }}', '{{ app.user.firstname }}')"></div>
  		{% endif %}
  		
 		<div>
