--- a/app/Resources/views/directives/game-login.html.twig
+++ b/app/Resources/views/directives/game-login.html.twig
@@ -2,5 +2,5 @@
 <a href='{{ url('fos_user_registration_register') }}' class = 'btn btn-primary inset'>Register</a>
 <br/>
 <br/>
-<a ng-click="loginCtrl.guestLogin()" class ='btn btn-primary inset loginBtn' >Guest Login</a>
+<a href='{{ url('guest_registration') }}' class = 'btn btn-primary inset'>Guest Login</a>
 </div>
