--- a/app/Resources/views/directives/game-login.html.twig
+++ b/app/Resources/views/directives/game-login.html.twig
@@ -2,5 +2,5 @@
 <a href='{{ url('fos_user_registration_register') }}' class = 'btn btn-primary inset'>Register</a>
 <br/>
 <br/>
-<a href='{{ url('guest_registration') }}' class = 'btn btn-primary inset'>Guest Login</a>
+<a href='{{ url('guest_registration') }}' class = 'btn btn-primary inset' name="Guest Login">Guest Login</a>
 </div>
