--- a/app/Resources/views/directives/common-footer.html.twig
+++ b/app/Resources/views/directives/common-footer.html.twig
@@ -3,18 +3,19 @@
 		<div class='row'>
 			<div class='col-lg-4 col-md-4 col-sm-4 col-xs-4'>
 				<h4>Who I Am</h4>
-				<p><i>C. Andrew Menning</i><a href='tickets.html'></p>
-				<p><a href='menning.html'>More About Me <i class='glyphicon glyphicon-arrow-right'></i></a></p>
+				<p><i>C. Andrew Menning</i></p>
+				<p><a href='http://metakata.altervista.org/AngularPickomino/menning.html' target='_blank'>More About Me <i class='glyphicon glyphicon-arrow-right'></i></a></p>
 			</div>
 
 			<div class='col-lg-4 col-md-4 col-sm-4 col-xs-4'>
 				<h4>Links</h4>
 				<ul class='list-unstyled'>
-					<li><a href='menning.html'>Home</a></li>
-					<li><a href='pickomino.php'>AngularJS Example</a></li>
+					<li><a href='http://metakata.altervista.org/AngularPickomino/menning.html' target='_blank'>Home</a></li>
+					<li><a href='http://fathomless-citadel-28363.herokuapp.com/' target='_blank'>Rails-Angular-PG Example</a></li>
+					<li><a href='/' target='_blank'>Symfony-Angular-PG Example</a></li>	
 					<li><a href='http://catalysisclubphilly.org/' target="_blank">Webmaster Example</a></li>
-					<li><a href="random_quotes.html">Random Quotes Generator</a></li>
-					<li><a href="pomodoro_timer.html">Pomodoro Timer</a></li>
+					<li><a href="http://metakata.altervista.org/AngularPickomino/random_quotes.html" target='_blank'>Random Quotes Generator</a></li>
+					<li><a href="http://metakata.altervista.org/AngularPickomino/pomodoro_timer.html" target='_blank'>Pomodoro Timer</a></li>
 				</ul>
 			</div>
 
